# haskell-gsgp

./: CHANGELOG.md  LICENSE  haskell-gsgp.cabal  stack.yaml
app/: Main.hs
src/GSGP/: BloatControl.hs  Data.hs  Language.hs  Metrics.hs  Selection.hs  Statistics.hs  World.hs
src/GSGP/Language/: Arith.hs
src/GSGP/World/: Seq.hs
