name:                haskell-gsgp
version:             0.2.0
synopsis:            Geometric Semantic Genetic Programming in Haskell
description:         Please see README.md
homepage:            https://github.com/FelipeRosa/haskell-gsgp
license:             BSD3
license-file:        LICENSE
author:              Felipe Soares Gonçalves Rosa <felipe.sgrosa@gmail.com>
maintainer:          Felipe Soares Gonçalves Rosa <felipe.sgrosa@gmail.com>
copyright:           2016 Felipe Soares Gonçalves Rosa
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GSGP.Data
                     , GSGP.Language
                     , GSGP.Metrics
  build-depends:       base >=4.9 && <5
                     , vector >=0.11.0.0
                     , random-fu >=0.2.7.0
  default-language:    Haskell2010

executable haskell-gsgp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-gsgp
                     , random-fu
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FelipeRosa/haskell-gsgp
